feat(categoria-infrastructure): implementando o endpoint de criação de categoria